# service_churn

./: Dockerfile  EDA.ipynb  Normality_test.ipynb  README.md  app.py  docker-compose.yml  models.ipynb  pyproject.toml  requirements.txt  scaled.joblib  with_min_max.ipynb
data/: mode_and_three_monthes2.csv
model/: scaled.joblib
