[tool.poetry]
name = "service-churn"
version = "0.1.0"
description = "Прогнозування Відтоку Клієнтів для Телекомунікаційної компанії"
authors = ["MariiaSam <kontragent@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.8"
streamlit = "^1.41.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
joblib= "^1.4.2"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
